--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.1.2-5'
+    ext.kotlinx_version = '0.16'
     ext.android_plugin_version = '3.0.0-alpha4'
     ext.appCompatVersion = '26.0.0-beta2'
     repositories {
