--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.2-5'
+    ext.kotlin_version = '1.1.3'
     ext.kotlinx_version = '0.16'
-    ext.android_plugin_version = '3.0.0-alpha4'
+    ext.android_plugin_version = '3.0.0-alpha5'
     ext.appCompatVersion = '26.0.0-beta2'
     repositories {
         maven { url 'https://maven.google.com' }
