--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.3'
+    ext.kotlin_version = '1.1.3-2'
     ext.kotlinx_version = '0.16'
     ext.android_plugin_version = '3.0.0-alpha5'
     ext.appCompatVersion = '26.0.0-beta2'
