--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation "com.android.support:support-fragment:$rootProject.ext.appCompatVersion"
     implementation "com.android.support:design:$rootProject.ext.appCompatVersion"
     implementation "com.android.support:support-vector-drawable:$rootProject.ext.appCompatVersion"
+    implementation "com.android.support:preference-v7:$rootProject.ext.appCompatVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta1'
     implementation "android.arch.lifecycle:runtime:$rootProject.ext.archVersion"
     implementation "android.arch.lifecycle:extensions:$rootProject.ext.archVersion"
