--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@
 buildscript {
     ext.kotlin_version = '1.1.3-2'
     ext.kotlinx_version = '0.17'
-    ext.android_plugin_version = '3.0.0-alpha7'
-    ext.appCompatVersion = '26.0.0-beta2'
+    ext.android_plugin_version = '3.0.0-alpha8'
+    ext.appCompatVersion = '26.0.0'
     ext.archVersion = '1.0.0-alpha4'
     repositories {
         maven { url 'https://maven.google.com' }
