--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,9 @@
 buildscript {
     ext.kotlin_version = '1.1.3-2'
     ext.kotlinx_version = '0.17'
-    ext.android_plugin_version = '3.0.0-alpha9'
+    ext.android_plugin_version = '3.0.0-beta1'
     ext.appCompatVersion = '26.0.1'
-    ext.archVersion = '1.0.0-alpha7'
+    ext.archVersion = '1.0.0-alpha8'
     repositories {
         maven { url 'https://maven.google.com' }
         jcenter()
