Upgrade Arch components to v1.0.0-beta1

--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     ext.kotlinx_version = '0.18'
     ext.android_plugin_version = '3.0.0-beta6'
     ext.appCompatVersion = '26.1.0'
-    ext.archVersion = '1.0.0-alpha9-1'
+    ext.archVersion = '1.0.0-beta1'
     repositories {
         maven { url 'https://maven.google.com' }
         jcenter()
