--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.4-3'
+    ext.kotlin_version = '1.1.51'
     ext.kotlinx_version = '0.18'
     ext.android_plugin_version = '3.0.0-beta6'
     ext.appCompatVersion = '26.1.0'
