Update build tools

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ kotlin {
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '26.0.2'
     dataBinding.enabled = true
     defaultConfig {
         applicationId "org.gmetais.downloadmanager"
