--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,9 @@
 buildscript {
     ext.kotlin_version = '1.1.51'
     ext.kotlinx_version = '0.19'
-    ext.android_plugin_version = '3.0.0-beta7'
+    ext.android_plugin_version = '3.0.0'
     ext.appCompatVersion = '26.1.0'
-    ext.archVersion = '1.0.0-beta1'
+    ext.archVersion = '1.0.0-rc1'
     repositories {
         maven { url 'https://maven.google.com' }
         jcenter()
