--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,8 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url 'https://maven.google.com' }
+        google()
         jcenter()
-        mavenCentral()
     }
 }
 
