--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,17 @@ android {
         buildConfigField "String", "API_URL", "\"${properties.getProperty("api.url")}\""
         buildConfigField "String", "API_USERNAME", "\"${properties.getProperty('api.username')}\""
         buildConfigField "String", "API_SECRET", "\"${properties.getProperty('api.secret')}\""
+        // used by Room, to test migrations
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
+    // used by Room, to test migrations
+//    sourceSets {
+//        androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
+//    }
     buildTypes {
         release {
             minifyEnabled false
@@ -45,19 +55,27 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$rootProject.ext.kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.ext.kotlinx_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.ext.kotlinx_version"
+
     implementation "com.android.support:appcompat-v7:$rootProject.ext.appCompatVersion"
     implementation "com.android.support:support-fragment:$rootProject.ext.appCompatVersion"
     implementation "com.android.support:design:$rootProject.ext.appCompatVersion"
     implementation "com.android.support:support-vector-drawable:$rootProject.ext.appCompatVersion"
     implementation "com.android.support:preference-v7:$rootProject.ext.appCompatVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta3'
+
     implementation "android.arch.lifecycle:extensions:$rootProject.ext.archVersion"
-    annotationProcessor "android.arch.lifecycle:compiler:$rootProject.ext.archVersion"
+    kapt "android.arch.lifecycle:compiler:$rootProject.ext.archVersion"
+
+    implementation "android.arch.persistence.room:runtime:$rootProject.ext.archVersion"
+    kapt "android.arch.persistence.room:compiler:$rootProject.ext.archVersion"
+
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.3.0'
+
+//    androidTestImplementation "android.arch.persistence.room:testing:$rootProject.ext.archVersion"
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testImplementation 'junit:junit:4.12'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.3.0'
 }
 
