--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ buildscript {
     ext.kotlin_version = '1.2.0'
     ext.kotlinx_version = '0.20'
     ext.android_plugin_version = '3.0.1'
-    ext.appCompatVersion = '26.1.0'
-    ext.archVersion = '1.0.0-rc1'
+    ext.appCompatVersion = '27.0.2'
+    ext.archVersion = '1.0.0'
     repositories {
         maven { url 'https://maven.google.com' }
         jcenter()
