--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,13 +11,13 @@ kotlin {
 }
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     buildToolsVersion '27.0.2'
     dataBinding.enabled = true
     defaultConfig {
         applicationId "org.gmetais.downloadmanager"
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -61,13 +61,13 @@ dependencies {
     implementation "com.android.support:design:$rootProject.ext.appCompatVersion"
     implementation "com.android.support:support-vector-drawable:$rootProject.ext.appCompatVersion"
     implementation "com.android.support:preference-v7:$rootProject.ext.appCompatVersion"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta4'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta5'
 
     implementation "android.arch.lifecycle:extensions:$rootProject.ext.archVersion"
     kapt "android.arch.lifecycle:compiler:$rootProject.ext.archVersion"
 
-    implementation "android.arch.persistence.room:runtime:$rootProject.ext.archVersion"
-    kapt "android.arch.persistence.room:compiler:$rootProject.ext.archVersion"
+    implementation "android.arch.persistence.room:runtime:$rootProject.ext.archVersion-alpha3"
+    kapt "android.arch.persistence.room:compiler:$rootProject.ext.archVersion-alpha3"
 
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.3.0'
