--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,6 @@ kotlin {
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.2'
     dataBinding.enabled = true
     defaultConfig {
         applicationId "org.gmetais.downloadmanager"
@@ -51,7 +50,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    kapt "com.android.databinding:compiler:$rootProject.ext.android_plugin_version"
+//    kapt "com.android.databinding:compiler:$rootProject.ext.android_plugin_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$rootProject.ext.kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.ext.kotlinx_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.ext.kotlinx_version"
