--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,34 +49,28 @@ android {
 
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-//    kapt "com.android.databinding:compiler:$rootProject.ext.android_plugin_version"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$rootProject.ext.kotlin_version"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    //    kapt "com.android.databinding:compiler:$rootProject.ext.android_plugin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$rootProject.ext.kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.ext.kotlinx_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.ext.kotlinx_version"
-
     implementation "com.android.support:appcompat-v7:$rootProject.ext.appCompatVersion"
     implementation "com.android.support:support-fragment:$rootProject.ext.appCompatVersion"
     implementation "com.android.support:design:$rootProject.ext.appCompatVersion"
     implementation "com.android.support:support-vector-drawable:$rootProject.ext.appCompatVersion"
     implementation "com.android.support:preference-v7:$rootProject.ext.appCompatVersion"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta6'
-
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation "android.arch.lifecycle:extensions:$rootProject.ext.archVersion"
     kapt "android.arch.lifecycle:compiler:$rootProject.ext.archVersion"
-
-    implementation "android.arch.persistence.room:runtime:1.1.0-beta1"
-    kapt "android.arch.persistence.room:compiler:1.1.0-beta1"
-
+    implementation 'android.arch.persistence.room:runtime:1.1.0-beta3'
+    kapt "android.arch.persistence.room:compiler:1.1.0-beta3"
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.3.0'
-
     kapt "com.google.dagger:dagger-android-processor:$rootProject.ext.daggerVersion"
     implementation "com.google.dagger:dagger:$rootProject.ext.daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$rootProject.ext.daggerVersion"
     implementation "com.google.dagger:dagger-android-support:$rootProject.ext.daggerVersion"
-
-//    androidTestImplementation "android.arch.persistence.room:testing:$rootProject.ext.archVersion"
+    //    androidTestImplementation "android.arch.persistence.room:testing:$rootProject.ext.archVersion"
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
