--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.41'
-    ext.kotlinx_version = '0.22.2'
-    ext.android_plugin_version = '3.1.2'
+    ext.kotlin_version = '1.2.51'
+    ext.kotlinx_version = '0.23.4'
+    ext.android_plugin_version = '3.1.3'
     ext.appCompatVersion = '27.1.1'
     ext.daggerVersion = '2.14.1'
     ext.archVersion = '1.1.1'
-    ext.roomVersion = '1.1.0-rc1'
+    ext.roomVersion = '1.1.1'
     repositories {
-        jcenter()
         google()
+        jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$android_plugin_version"
