--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.60'
-    ext.kotlinx_version = '0.23.4'
-    ext.android_plugin_version = '3.1.3'
+    ext.kotlin_version = '1.2.61'
+    ext.kotlinx_version = '0.24.0'
+    ext.android_plugin_version = '3.2.0-rc02'
     ext.appCompatVersion = '27.1.1'
     ext.daggerVersion = '2.14.1'
     ext.archVersion = '1.1.1'
