--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -28,6 +28,7 @@ android {
 
 dependencies {
     api 'com.android.support:appcompat-v7:27.1.1'
+    api "android.arch.lifecycle:extensions:$rootProject.ext.archVersion"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     testImplementation 'junit:junit:4.12'
