Update AGP & Kotlin

--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.70'
-    ext.kotlinx_version = '0.26.0'
-    ext.android_plugin_version = '3.2.0-rc02'
+    ext.kotlin_version = '1.2.71'
+    ext.kotlinx_version = '0.30.2'
+    ext.android_plugin_version = '3.2.1'
     ext.appCompatVersion = '27.1.1'
     ext.archVersion = '1.1.1'
     ext.roomVersion = '1.1.1'
