--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,5 @@ org.gradle.jvmargs=-Xmx2048m
 # org.gradle.parallel=true
 android.enableD8=true
 kapt.use.worker.api=true
+android.useAndroidX=true
+android.enableJetifier=true
