--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,15 +11,15 @@ kotlin {
 }
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     dataBinding.enabled = true
     defaultConfig {
         applicationId "org.gmetais.downloadmanager"
         minSdkVersion 15
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
 
         //Load local properties
@@ -55,23 +55,23 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.ext.kotlinx_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.ext.kotlinx_version"
     //AppCompat
-    implementation "com.android.support:appcompat-v7:$rootProject.ext.appCompatVersion"
-    implementation "com.android.support:support-fragment:$rootProject.ext.appCompatVersion"
-    implementation "com.android.support:design:$rootProject.ext.appCompatVersion"
-    implementation "com.android.support:support-vector-drawable:$rootProject.ext.appCompatVersion"
-    implementation "com.android.support:preference-v7:$rootProject.ext.appCompatVersion"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation "androidx.appcompat:appcompat:$rootProject.ext.androidxVersion"
+    implementation "androidx.fragment:fragment:$rootProject.ext.androidxVersion"
+    implementation "com.google.android.material:material:$rootProject.ext.androidxVersion"
+    implementation "androidx.vectordrawable:vectordrawable:$rootProject.ext.androidxVersion"
+    implementation "androidx.preference:preference:$rootProject.ext.androidxVersion"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.0-alpha2"
     //Arch Components
-    implementation "android.arch.lifecycle:extensions:$rootProject.ext.archVersion"
-    kapt "android.arch.lifecycle:compiler:$rootProject.ext.archVersion"
-    implementation "android.arch.persistence.room:runtime:$rootProject.ext.roomVersion"
-    kapt "android.arch.persistence.room:compiler:$rootProject.ext.roomVersion"
+    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.ext.archVersion"
+    kapt "androidx.lifecycle:lifecycle-compiler:$rootProject.ext.archVersion"
+    implementation "androidx.room:room-runtime:$rootProject.ext.roomVersion"
+    kapt "androidx.room:room-compiler:$rootProject.ext.roomVersion"
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.4.0'
     //Testing
     //    androidTestImplementation "android.arch.persistence.room:testing:$rootProject.ext.archVersion"
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0-beta02', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testImplementation 'junit:junit:4.12'
