--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,10 @@ buildscript {
     ext.kotlin_version = '1.2.71'
     ext.kotlinx_version = '0.30.2'
     ext.android_plugin_version = '3.2.1'
-    ext.appCompatVersion = '27.1.1'
-    ext.archVersion = '1.1.1'
-    ext.roomVersion = '1.1.1'
+    ext.appCompatVersion = '28.0.0'
+    ext.androidxVersion = '1.0.0'
+    ext.archVersion = '2.0.0'
+    ext.roomVersion = '2.1.0-alpha01'
     repositories {
         google()
         jcenter()
