--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.10'
-    ext.kotlinx_version = '1.0.1'
+    ext.kotlin_version = '1.3.11'
+    ext.kotlinx_version = '1.1.0'
     ext.android_plugin_version = '3.2.1'
     ext.appCompatVersion = '28.0.0'
     ext.androidxVersion = '1.0.0'
+    ext.androidxAppCompatVersion = '1.0.2'
+    ext.androidxVectorDrawableVersion = '1.0.1'
     ext.archVersion = '2.0.0'
-    ext.roomVersion = '2.1.0-alpha01'
+    ext.roomVersion = '2.1.0-alpha03'
     repositories {
         google()
         jcenter()
