Migrate to Gradle Kotlin DSL

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,6 @@ android.enableD8=true
 kapt.use.worker.api=true
 android.useAndroidX=true
 android.enableJetifier=true
+username="dekans"
+secret="password"
+url="http://192.168.1.18:8088/"
